Fix: overflow-y set to auto instead of overlay

--- a/src/styles/prepare.css
+++ b/src/styles/prepare.css
@@ -196,7 +196,7 @@
 }
 
 .b-prepare__orders__orders {
-  overflow-y: overlay;
+  overflow-y: auto;
 }
 
 .b-prepare__orders__tabs__tab {
